--- a/E2E/ARFP-Stratasphere/package.json
+++ b/E2E/ARFP-Stratasphere/package.json
@@ -4,12 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-
+    "allure:report": "allure generate cypress\\reports\\allure-results --clean -o cypress\\reports\\allure-report",
+    "allure:clear": "if exist cypress\\reports\\allure-results rmdir /q /s cypress\\reports\\allure-results && if exist cypress\\reports\\allure-report rmdir /q /s cypress\\reports\\allure-report && if exist cypress\\screenshots rmdir /q /s cypress\\screenshots && if exist cypress\\videos rmdir /q /s cypress\\videos",
+    
     "cy:run:stratasphere": "cypress run --browser chrome --headed --env tags=\"@stratasphere\" allure=true",
     "cy:run:arfp": "cypress run --browser chrome --headed --env tags=\"@arfp\" allure=true",
-    "allure:report": "allure generate cypress/allure-results --clean -o cypress\\allure-report",
-    "allure:clear": "if exist cypress\\allure-results rmdir /q /s cypress\\allure-results && if exist cypress\\allure-report rmdir /q /s cypress\\allure-report && if exist cypress\\screenshots rmdir /q /s cypress\\screenshots && if exist cypress\\videos rmdir /q /s cypress\\videos",
-    
+
     "test-stratasphere": "npm run allure:clear && npm run cy:run:stratasphere && npm run allure:report",
     "test-arfp": "npm run allure:clear && npm run cy:run:arfp && npm run allure:report"
     
