--- a/E2E/ARFP-Stratasphere/package.json
+++ b/E2E/ARFP-Stratasphere/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "edp_automation",
+  "name": "arfp-stratasphere",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,9 +7,11 @@
     "allure:report": "allure generate cypress\\reports\\allure-results --clean -o cypress\\reports\\allure-report",
     "allure:clear": "if exist cypress\\reports\\allure-results rmdir /q /s cypress\\reports\\allure-results && if exist cypress\\reports\\allure-report rmdir /q /s cypress\\reports\\allure-report && if exist cypress\\screenshots rmdir /q /s cypress\\screenshots && if exist cypress\\videos rmdir /q /s cypress\\videos",
     
+    "cy:run:all": "cypress run --browser chrome --headed --env allure=true",
     "cy:run:stratasphere": "cypress run --browser chrome --headed --env tags=\"@stratasphere\" allure=true",
     "cy:run:arfp": "cypress run --browser chrome --headed --env tags=\"@arfp\" allure=true",
 
+    "test": "npm run allure:clear && npm run cy:run:all && npm run allure:report",
     "test-stratasphere": "npm run allure:clear && npm run cy:run:stratasphere && npm run allure:report",
     "test-arfp": "npm run allure:clear && npm run cy:run:arfp && npm run allure:report"
     
