Add  node ./cucumber-html-report.js

--- a/E2E/ARFP-Stratasphere/Jenkinsfile
+++ b/E2E/ARFP-Stratasphere/Jenkinsfile
@@ -23,7 +23,7 @@ pipeline {
     post {
         echo 'Testing Completed!'
         script {
-            sh "node .\cucumber-html-report.js"
+            sh "node ./cucumber-html-report.js"
         }
 
     }
