--- a/E2E/ARFP-Stratasphere/Jenkinsfile
+++ b/E2E/ARFP-Stratasphere/Jenkinsfile
@@ -21,11 +21,15 @@ pipeline {
     }
 
     post {
-        echo 'Testing Completed!'
+        always{
+                   echo 'Testing Completed!'
         script {
             sh "node ./cucumber-html-report.js"
+        } 
+        }
+
         }
 
     }
 
-    }
+    
