--- a/E2E/ARFP-Stratasphere/Jenkinsfile
+++ b/E2E/ARFP-Stratasphere/Jenkinsfile
@@ -7,7 +7,7 @@ pipeline {
     }
     }
      parameters{
-        choice(name: 'POJECTS', choices: ['stratasphere', 'arfp'], description: "Choice the Project to run")
+        choice(name: 'POJECTS', choices: ['stratasphere', 'arfp', 'wip'], description: "Choice the Project to run")
     }
      options{
         ansiColor('xterm')
