Added to post 7

--- a/E2E/ARFP-Stratasphere/Jenkinsfile
+++ b/E2E/ARFP-Stratasphere/Jenkinsfile
@@ -23,18 +23,22 @@ pipeline {
     post{
 
         always{
-             publishHTML (target : [allowMissing: true,
+            script {
+                sh "cd E2E/ARFP-Stratasphere && node ./cucumber-html-report.js"
+            }
+
+        publishHTML (target : [allowMissing: true,
         alwaysLinkToLastBuild: true,
         keepAll: true,
         reportDir: 'E2E/ARFP-Stratasphere/cypress/reports',
-        reportFiles: 'cucumber-reports/cucumber-htmlreport.html.html/index.html',
+        reportFiles: 'E2E/ARFP-Stratasphere/cypress/reports/cucumber-reports/cucumber-html-report/index.html',
         reportName: 'Cucumber Report',
         reportTitles: 'Cucumber Report'])
       publishHTML (target : [allowMissing: true,
         alwaysLinkToLastBuild: true,
         keepAll: true,
         reportDir: 'E2E/ARFP-Stratasphere/cypress/reports',
-        reportFiles: 'multi-html-report/index.html',
+        reportFiles: 'E2E/ARFP-Stratasphere/cypress/reports/multi-html-report/index.html',
         reportName: 'Multi HTML Report',
         reportTitles: 'Multi HTML Report'])
         
