--- a/E2E/ARFP-Stratasphere/package.json
+++ b/E2E/ARFP-Stratasphere/package.json
@@ -46,6 +46,7 @@
     "cypress-ntlm-auth": "^4.1.2",
     "cypress-recurse": "^1.31.2",
     "cypress-testrail": "^2.7.1",
+    "dotenv": "^16.2.0",
     "esbuild": "^0.17.18",
     "multiple-cucumber-html-reporter": "^3.4.0",
     "neat-csv": "5.1.0"
