--- a/E2E/ARFP-Stratasphere/package.json
+++ b/E2E/ARFP-Stratasphere/package.json
@@ -49,7 +49,9 @@
     "dotenv": "^16.2.0",
     "esbuild": "^0.17.18",
     "multiple-cucumber-html-reporter": "^3.4.0",
-    "neat-csv": "5.1.0"
+    "neat-csv": "5.1.0",
+    "node-xlsx": "^0.23.0",
+    "xlsx": "^0.18.5"
   },
   "dependencies": {
     "@badeball/cypress-cucumber-preprocessor": "latest",
