--- a/E2E/ARFP-Stratasphere/Jenkinsfile
+++ b/E2E/ARFP-Stratasphere/Jenkinsfile
@@ -16,7 +16,7 @@ pipeline {
     stages {
         stage('Test') {
             steps {
-            sh "cd E2E/ARFP-Stratasphere && npm cache clean --force && npm ci --prefer-offline && npx cypress run --browser chrome --env tags=\"@${POJECTS}\",ENV=\"@${ENVIRONMENT}\""
+            sh "cd E2E/ARFP-Stratasphere && npm cache clean --force && npm ci --prefer-offline && npx cypress run --browser chrome --env tags=\"@${POJECTS}\" && ENV=\"@${ENVIRONMENT}\""
             }
         }
     }
