--- a/E2E/ARFP-Stratasphere/Jenkinsfile
+++ b/E2E/ARFP-Stratasphere/Jenkinsfile
@@ -7,8 +7,8 @@ pipeline {
     }
 }
     parameters{
-        choice(name: 'ENVIRONMENT', choices: ['Production', 'QA'], description: "Choice the Environment to run")
-        choice(name: 'POJECTS', choices: ['Stratasphere', 'ARFP', 'WIP'], description: "Choice the Project to run")
+        choice(name: 'ENVIRONMENT', choices: ['Production', 'QA'], description: "Choose the Environment to run")
+        choice(name: 'POJECTS', choices: ['Stratasphere', 'ARFP', 'WIP'], description: "Choose the Project to run")
     }
     options{
         ansiColor('xterm')
