Added to .gitignore

--- a/E2E/ARFP-Stratasphere/.gitignore
+++ b/E2E/ARFP-Stratasphere/.gitignore
@@ -2,3 +2,5 @@ node_modules
 screenshots
 videos
 reports
+cypress/fixtures/agencyRFP/parsed-xlsx-from-response-screen.json
+cypress/fixtures/agencyRFP/ui-table-from-response-screen.json
