--- a/E2E/ARFP-Stratasphere/.gitignore
+++ b/E2E/ARFP-Stratasphere/.gitignore
@@ -4,3 +4,5 @@ videos
 reports
 cypress/fixtures/agencyRFP/parsed-xlsx-from-response-screen.json
 cypress/fixtures/agencyRFP/ui-table-from-response-screen.json
+cypress/downloads/Chicago - TV.prx
+cypress/downloads/Linear response detail.xlsx
