--- a/E2E/ARFP-Stratasphere/package.json
+++ b/E2E/ARFP-Stratasphere/package.json
@@ -37,7 +37,7 @@
     "@cypress/browserify-preprocessor": "^3.0.2",
     "@shelex/cypress-allure-plugin": "^2.39.1",
     "convert-excel-to-json": "^1.7.0",
-    "cypress": "^12.12.0",
+    "cypress": "^12.17.1",
     "cypress-cucumber-attach-screenshots-to-failed-steps": "^1.0.0",
     "cypress-cucumber-preprocessor": "^4.3.1",
     "cypress-data-session": "^2.7.0",
@@ -56,8 +56,7 @@
   },
   "dependencies": {
     "@badeball/cypress-cucumber-preprocessor": "latest",
-    "@cypress/browserify-preprocessor": "latest",
-    "cypress": "latest"
+    "@cypress/browserify-preprocessor": "latest"
   },
   "chromeWebSecurity": false
 }
