--- a/E2E/ARFP-Stratasphere/Jenkinsfile
+++ b/E2E/ARFP-Stratasphere/Jenkinsfile
@@ -44,7 +44,7 @@ pipeline {
                        'domain': reporterConfig1.testrail.domain,
                        'username': reporterConfig1.testrail.username.values[0],
                        'password': reporterConfig1.testrail.password.values[0],
-                       'runId': (runId)
+                       'runId': reporterConfig1.testrail.runId.values[0]
                         ]
                         reporterConfig.put("testrail", testrail)
                         json = JsonOutput.toJson(reporterConfig)
