Updated change password

--- a/E2E/ARFP-Stratasphere/package.json
+++ b/E2E/ARFP-Stratasphere/package.json
@@ -23,7 +23,7 @@
     },
     "messages": {
       "enabled": true,
-      "output": "cypress/reports/messages/cucumber-messages.ndjson"
+      "output": "cypress/reports/messages/cucumber-messages.json"
     },
     "html": {
       "enabled": true,
