--- a/E2E/Eleven/package.json
+++ b/E2E/Eleven/package.json
@@ -32,11 +32,14 @@
     "@shelex/cypress-allure-plugin": "^2.39.1",
     "@types/cypress-cucumber-preprocessor": "^4.0.1",
     "@types/jquery": "^3.5.16",
+    "cheerio": "^1.0.0-rc.12",
     "convert-excel-to-json": "^1.7.0",
-    "cypress": "^12.17.1",
+    "cy-verify-downloads": "^0.1.15",
+    "cypress": "^12.17.3",
     "cypress-cucumber-attach-screenshots-to-failed-steps": "^1.0.0",
     "cypress-cucumber-preprocessor": "^4.3.1",
     "cypress-data-session": "^2.7.0",
+    "cypress-downloadfile": "^1.2.3",
     "cypress-fail-on-console-error": "^4.0.2",
     "cypress-file-upload": "^5.0.8",
     "cypress-iframe": "^1.0.1",
