--- a/E2E/Strata-eBiz/Jenkinsfile
+++ b/E2E/Strata-eBiz/Jenkinsfile
@@ -38,7 +38,7 @@ pipeline {
                        'domain': reporterConfig1.testrail.domain,
                        'username': reporterConfig1.testrail.username.values[0],
                        'password': reporterConfig1.testrail.password.values[0],
-                       'runId': reporterConfig1.testrail.runId.values[0]
+                       'runId': reporterConfig1.testrail.runId
                         ]
                         reporterConfig.put("testrail", testrail)
                         json = JsonOutput.toJson(reporterConfig)
