--- a/E2E/Strata-eBiz/Jenkinsfile
+++ b/E2E/Strata-eBiz/Jenkinsfile
@@ -8,9 +8,9 @@ pipeline {
             args '--ipc=host'
     }
 }
-   environment {
-            EMAIL_INFORM = 'gsemenduyev@freewheel.tv;gsemendyev@yahoo.com'
-        }
+//    environment {
+//             EMAIL_INFORM = 'gsemenduyev@freewheel.tv;gsemendyev@yahoo.com'
+//         }
     options{
         ansiColor('xterm')
     }
@@ -107,9 +107,10 @@ pipeline {
         }
           failure{
                 script {
-                mail (to: "${EMAIL_INFORM}",
-                        subject: "Job '${env.JOB_NAME}' (${env.BUILD_NUMBER}) failed",
-                        body: 'failure Please visit ${env.BUILD_URL} for further information ${FILE,path="E2E/Strata-eBiz/cypress/reports/multi-html-report/index.html"}'
+                mail (to: "gsemenduyev@freewheel.tv",
+                      cc: 'gsemendyev@yahoo.com'
+                      subject: "Job '${env.JOB_NAME}' (${env.BUILD_NUMBER}) failed",
+                      body: 'failure Please visit ${env.BUILD_URL} for further information ${FILE,path="E2E/Strata-eBiz/cypress/reports/multi-html-report/index.html"}'
                 );
                 }
         }
