--- a/E2E/Strata-eBiz/Jenkinsfile
+++ b/E2E/Strata-eBiz/Jenkinsfile
@@ -108,9 +108,9 @@ pipeline {
           failure{
                 script {
                 mail (to: "gsemenduyev@freewheel.tv",
-                      cc: 'gsemendyev@yahoo.com',
+                      cc: "ghenikwork@gmail.com",
                       subject: "Job '${env.JOB_NAME}' (${env.BUILD_NUMBER}) failed",
-                      body: 'failure Please visit ${env.BUILD_URL} for further information ${FILE,path="E2E/Strata-eBiz/cypress/reports/multi-html-report/index.html"}'
+                      body: "failure Please visit ${env.BUILD_URL} for further information ${FILE='E2E/Strata-eBiz/cypress/reports/multi-html-report/index.html'}"
                 );
                 }
         }
