--- a/E2E/Strata-eBiz/Jenkinsfile
+++ b/E2E/Strata-eBiz/Jenkinsfile
@@ -110,7 +110,7 @@ pipeline {
                 mail (to: "gsemenduyev@freewheel.tv",
                       cc: "ghenikwork@gmail.com",
                       subject: "Job '${env.JOB_NAME}' (${env.BUILD_NUMBER}) failed",
-                      body: "failure Please visit ${env.BUILD_URL} for further information ${FILE='E2E/Strata-eBiz/cypress/reports/multi-html-report/index.html'}"
+                      body: "failure Please visit ${env.BUILD_URL} for further information ${FILE=E2E/Strata-eBiz/cypress/reports/multi-html-report/index.html}"
                 );
                 }
         }
