--- a/E2E/Strata-eBiz/Jenkinsfile
+++ b/E2E/Strata-eBiz/Jenkinsfile
@@ -107,12 +107,17 @@ pipeline {
         }
           failure{
                 script {
-                mail (to: "gsemenduyev@freewheel.tv",
-                      cc: "ghenikwork@gmail.com",
+                //    dev reportContent = readFile(file: 'E2E/Strata-eBiz/cypress/reports/multi-html-report/index.html')
+                 emailext(
                       subject: "Job '${env.JOB_NAME}' (${env.BUILD_NUMBER}) failed",
-                      body: "failure Please visit ${env.BUILD_URL} for further information ${FILE=E2E/Strata-eBiz/cypress/reports/multi-html-report/index.html}"
+                      body: "failure Please visit ${env.BUILD_URL} for further information",
+                      mimeType:'text/html',
+                      to: "gsemenduyev@freewheel.tv",
+                      cc: "ghenikwork@gmail.com",
+                      attachLog: true,
+                      attachmentsPattern: 'E2E/Strata-eBiz/cypress/reports/multi-html-report/index.html'
                 );
-                }
+             }
         }
     }
 }
