--- a/E2E/Strata-eBiz/Jenkinsfile
+++ b/E2E/Strata-eBiz/Jenkinsfile
@@ -108,13 +108,13 @@ pipeline {
           failure{
                 script {
                 //    dev reportContent = readFile(file: 'E2E/Strata-eBiz/cypress/reports/multi-html-report/index.html')
-                 emailext(
+                 mail(
                       subject: "Job '${env.JOB_NAME}' (${env.BUILD_NUMBER}) failed",
                       body: "failure Please visit ${env.BUILD_URL} for further information",
                   //    mimeType:'text/html',
                       to: "gsemenduyev@freewheel.tv",
                     //  cc: "ghenikwork@gmail.com",
-                      attachLog: true,
+                   //   attachLog: true,
                 //      attachmentsPattern: 'E2E/Strata-eBiz/cypress/reports/multi-html-report/index.html'
                 );
              }
