--- a/E2E/Strata-eBiz/Jenkinsfile
+++ b/E2E/Strata-eBiz/Jenkinsfile
@@ -107,15 +107,15 @@ pipeline {
         }
           failure{
                 script {
-                dev reportContent = readFile(file: 'E2E/Strata-eBiz/cypress/reports/multi-html-report/index.html')
+                def reportContent = readFile(file: 'E2E/Strata-eBiz/cypress/reports/multi-html-report/index.html')
                  mail(
                       subject: "Job '${env.JOB_NAME}' (${env.BUILD_NUMBER}) failed",
                       body: "failure Please visit ${env.BUILD_URL} for further information" + reportContent,
-                      mimeType:'text/html',
+                  //    mimeType:'text/html',
                       to: "gsemenduyev@freewheel.tv",
                       cc: "ghenikwork@gmail.com",
                       attachLog: true,
-                      attachmentsPattern: 'E2E/Strata-eBiz/cypress/reports/multi-html-report/index.html'
+                 //     attachmentsPattern: 'E2E/Strata-eBiz/cypress/reports/multi-html-report/index.html'
                 );
              }
         }
