--- a/E2E/Strata-eBiz/Jenkinsfile
+++ b/E2E/Strata-eBiz/Jenkinsfile
@@ -108,10 +108,9 @@ pipeline {
           failure{
                 script {
             //    def reportContent = readFile(file: 'E2E/Strata-eBiz/cypress/reports/multi-html-report/index.html')
-                 emailext(
+                sendEmail(
                       subject: "Job '${env.JOB_NAME}' (${env.BUILD_NUMBER}) failed",
                       body: "${currentBuild.currentResult}: Please visit  ${env.BUILD_URL} for further information",
-                  //    mimeType:'text/html',
                       to: "gsemenduyev@freewheel.tv",
                       cc: "ghenikwork@gmail.com",
                                       );
